@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/development-sources/Attic/development-sources-2.6.0_beta11.ebuild,v 1.2 2003/11/30 12:59:02 plasmaroo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/development-sources/Attic/development-sources-2.6.0_beta11.ebuild,v 1.3 2003/12/03 15:36:52 gmsoft Exp $
 #OKV=original kernel version, KV=patched kernel version.  They can be the same.
 
 #Original Kernel Version before Patches
@@ -26,11 +26,14 @@ DESCRIPTION="Full sources for the Development Branch of the Linux kernel"
 [ ! ${GPV} == 0 ] && GPATCH_URI="mirror://gentoo/distfiles/genpatches-2.6-${GPV}.tar.bz2"
 [ -z ${KV/*-bk*/} ] && PATCH_URI="http://www.kernel.org/pub/linux/kernel/v2.6/snapshots/patch-${KV}.bz2"
 
+HPPA_PATCH=pa0
+PATCH_URI="${PATCH_URI} hppa? ( http://cvs.parisc-linux.org/download/linux-2.6/patch-${OKV}-${HPPA_PATCH}.gz )"
+
 SRC_URI="mirror://kernel/linux/kernel/v2.6/linux-${OKV}.tar.bz2 ${PATCH_URI} ${GPATCH_URI}"
 HOMEPAGE="http://www.kernel.org/ http://www.gentoo.org/"
 LICENSE="GPL-2"
 SLOT="${KV}"
-KEYWORDS="-* x86 amd64"
+KEYWORDS="-* x86 amd64 ~hppa"
 PROVIDE="virtual/linux-sources virtual/alsa"
 
 if [ $ETYPE = "sources" ] && [ -z "`use build`" ]
@@ -63,6 +66,12 @@ src_unpack() {
 		epatch ${DISTDIR}/genpatches-2.6-${GPV}.tar.bz2
 		KV="${KV}-patchset-${GPV}"
 		cd ${WORKDIR}
+	fi
+
+	if [ "${ARCH}" = "hppa" ]
+	then
+		cd ${S}
+		epatch ${DISTDIR}/patch-${OKV}-${HPPA_PATCH}.gz
 	fi
 
 	# move to appropriate src dir
