@@ -1,8 +1,12 @@
 # ChangeLog for sys-kernel/development-sources
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.59 2003/11/27 01:45:53 brad_mssw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/development-sources/Attic/ChangeLog,v 1.60 2003/12/03 15:36:51 gmsoft Exp $
 
 *development-sources-2.6.0_beta11 (26 Nov 2003)
+
+  2 Dec 2003; Guy Martin <gmsoft@gentoo.org>
+  development-sources-2.6.0_beta11.ebuild :
+  Added hppa support. Marked ~hppa.
 
   26 Nov 2003; Brad House <brad_mssw@gentoo.org>
   development-sources-2.6.0_beta11.ebuild:
